--- a/.github/workflows/pdf_build.yml
+++ b/.github/workflows/pdf_build.yml
@@ -9,4 +9,4 @@ jobs:
       - name: Compile LaTeX document
         uses: dante-ev/latex-action@master
         with:
-          root_file: main.tex
+          root_file: dissertation.tex
